# currency-exchange-fastapi

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging_config.yaml  main.py  pyproject.toml  test_main.http
currency_exchange/core/: config.py
currency_exchange/core/db/: session.py
currency_exchange/migrations/: env.py
currency_exchange/migrations/versions/: 01829617eac0_.py
currency_exchange/models/: currency.py  exchange_rate.py
currency_exchange/schemas/: currency.py  exchange_rate.py
currency_exchange/static/templates/: index.html
nginx/: Dockerfile  nginx.conf
nginx/frontend/: index.html
nginx/frontend/js/: app.js  bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
src/: main.py
src/api/: __init__.py  currencies.py  exchange.py  exchange_rate.py  root.py
src/core/: config.py  dependencies.py
src/core/db/: base.py  session.py
src/exceptions/: exceptions.py  handlers.py
src/migrations/: env.py
src/migrations/versions/: 1ac9c9d2ce02_.py  3708d1e51e27_.py
src/models/: currency.py  exchange_rate.py
src/repositories/: currency.py  exchange_rate_repository.py
src/schemas/: currency.py  exchange_rate.py
src/services/: currency_service.py  exchange_rate_service.py
src/static/js/: app.js
tests/: conftest.py  test_api.py
